@@ -26,8 +26,8 @@
 # PLEASE DO NOT CHANGE FORMAT OF __version__ LINE (setup.py reads this)
 
 __author__    = "Thomas Perl <thp@perli.net>"
-__version__   = "0.8.0+svn20070117"
-__date__      = "2007-01-17"
+__version__   = "0.8.0+svn20070122"
+__date__      = "2007-01-22"
 __copyright__ = "Copyright (c) 2005-2007 %s. All rights reserved." % __author__
 __licence__   = "GPL"
 
