@@ -1,0 +1,34 @@
+
+RedHat Linux / Fedora Core seem to use a custom version of GNU wget, at 
+least as of early 2007. To overcome this problem, we're checking for both 
+the "normal" wget output and RedHat/Fedora output so we can parse both 
+variants for the speed string.
+
+For more information, please look at the gpodder-devel archives of January 2007.
+
+
+                              -- thp [thp at perli.net], 2007-01-22
+
+
+-----------------------------------
+
+From: nikosapi <nikosapi@gmail.com>
+To: Development for gPodder <gpodder-devel@lists.berlios.de>
+Date: Wed, 17 Jan 2007 15:40:10 -0500
+Subject: Re: [gpodder-devel] gPodder 0.9.0 preparations: Please translate
+	and test!
+
+
+Ok, I dug into this and found the problem. It seems FC6 uses they're own 
+version of wget (as you suspected). I don't know why they do this, the 
+official GNU one is more informative in a terminal. 
+I looked through libwget and reenacted it on the command line and these are my 
+results (this is right before the regexp is tested against msg): 
+
+Stock FC6 wget:
+'500K .......... .......... .......... .......... ..........  1%  518K 84s'
+Official GNU wget:
+'700K .......... .......... .......... .......... ..........  2%  505.27 KB/s'
+
+-----------------------------------
+
