@@ -1,3 +1,13 @@
+Mon, 22 Jan 2007 13:07:51 +0100 <thp@perli.net>
+        * doc/dev/redhat-wget-output.txt: Added info about the modified 
+          "wget" in RedHat/Fedora Core, based on Nick's mailing list 
+          discussion thread of January 2007
+        * src/gpodder/libwget.py: Applied slightly modified patch from 
+          Nick (nikosapi gmail com) to add support for Fedora's custom 
+          wget version so that the speed can be detected on Fedora Core 
+          desktops (should also enable RHEL workstations)
+        * bin/gpodder: version + rel.date
+
 Wed, 17 Jan 2007 19:09:27 +0100 <thp@perli.net>
         * src/gpodder/libwget.py: Set transfer timeout to 15 seconds when 
           downloading with wget (thanks to Nick [nikosapi gmail com] again 
